AUTOMAKE_OPTIONS = foreign 1.10
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src

MAINTAINERCLEANFILES = \
  aclocal.m4 \
  configure \
  Makefile.in \
  stamp-h.in \
  install-sh \
  missing \
  mkinstalldirs \
  depcomp \
  config.guess \
  config.sub \
  ltmain.sh \
  m4/libtool.m4 \
  m4/ltoptions.m4 \
  m4/ltsugar.m4 \
  m4/ltversion.m4 \
  m4/lt~obsolete.m4

EXTRA_DIST = \
  autogen.sh
